# raytracing-series

./: .gitignore  .roomodes  CMakeLists.txt  README.md
cpp/: .gitignore  README.md
cpp/src/: Vec3.hpp  main.cpp
docs/tutorial01/: textures_experiment.md  tut01_anskey.md  tut01_worksheet.md
pattern_experiments/: README.md
pattern_experiments/src/: main.py
pattern_expesiments/: .gitignore
pattern_expesiments/src/: pattern.py
python/: .gitignore  README.md  leet.py
python/src/: image.ppm  live_preview.py  main.py  profile_output.prof  scenes.py
python/src/core/: __init__.py  aabb.py  bvh_node.py  camera.py  hittable.py  hittable_list.py  interval.py  klein_bottle.py  material.py  mesh.py  perlin.py  quad.py  sphere.py  texture.py
python/src/renders/: subsurface_scattering.ppm  test_mesh.ppm  triangles.ppm  vol2_sec4_6.ppm  vol2_sec4_6_ver2.ppm  vol2_sec5.ppm  vol2_sec5_1.ppm  vol2_sec6.ppm
python/src/util/: __init__.py  color.py  ray.py  vec3.py
src/: Color.hpp  main.cpp  main.py  profile.txt  profile_output.prof  scenes.py  watch_ppm.py
src/core/: aabb.py  bvh_node.py  camera.py  hittable.py  hittable_list.py  interval.py  material.py  texture.py  triangle.py
src/util/: color.py  rtw_image.py
